--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Demo - Material Preferences</string>
+    <string name="app_name">Material Preferences Demo</string>
 </resources>
